# nlp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gpt-moe/: gpt_moe.ipynb
ppo-dpo/: ppo_dpo.ipynb
word2vec/: word2vec.ipynb
