[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
matplotlib = "^3.10.0"
torch = "^2.6.0"
numpy = "^2.2.3"
ipykernel = "^6.29.5"
datasets = "^3.3.2"
livelossplot = "^0.5.6"
tqdm = "^4.67.1"
hydra-core = "^1.3.2"
pre-commit = "^4.1.0"
lovely-tensors = "^0.1.18"
einops = "^0.8.1"
umap = "^0.1.1"
nltk = "^3.9.1"
scikit-learn = "^1.6.1"
rich = "^14.0.0"
wandb = "^0.19.9"
transformers = "^4.51.2"
huggingface-hub = "^0.30.2"
trl = "^0.16.1"
flake8 = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
